@@ -256,8 +256,7 @@ public class TomcatServletWebServerFactory extends AbstractServletWebServerFacto
     private void addJasperInitializer(TomcatEmbeddedContext context) {
         try {
             ServletContainerInitializer initializer = (ServletContainerInitializer) ClassUtils
-                    .forName("org.apache.jasper.servlet.JasperInitializer", null)
-                    .newInstance();
+                    .forName("org.apache.jasper.servlet.JasperInitializer", null).getDeclaredConstructor().newInstance();
             context.addServletContainerInitializer(initializer, null);
         } catch (Exception ex) {
             // Probably not Tomcat 8
